# gameboy_emulator

./: .gitignore  CMakeLists.txt  README.md
src/: bus.cpp  bus.h  bus_obj.cpp  bus_obj.h  gameboy.cpp  gameboy.h  main.cpp  memory.cpp  memory.h
src/APU/: APU.cpp  APU.h  APU_def.h
src/IO/: HDMA.cpp  HDMA.h  joypad.cpp  joypad.h  serial.cpp  serial.h  timer.cpp  timer.h
src/PPU/: PPU.cpp  PPU.h  PPU_def.h  PPU_utils.cpp  display.cpp  display.h
src/bus/: bus.cpp  bus.h  bus_obj.cpp  bus_obj.h
src/cpu/: cpu.cpp  cpu.h  cpu_instructions.cpp  cpu_utils.cpp  opcode.h  registers.cpp  registers.h
src/memory/: CRAM.cpp  CRAM.h  MBC.cpp  WRAM.cpp  WRAM.h  cartridge.cpp  cartridge.h  memory.cpp  memory.h  memory_map.h  register.cpp  register.h
src/test/: test_cpu.cpp  test_display.cpp  test_output.cpp
src/utils/: cli_parser.cpp  cli_parser.h  gb_global_t.h
